src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket.qsystem.Reset.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%Qubit = type opaque

define private %Qubit* @_hl.main.1(%Qubit* %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @__quantum__qis__reset__body(%Qubit* %0)
  ret %Qubit* %0
}

declare void @__quantum__qis__reset__body(%Qubit*)
