src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket.qsystem.TryQAlloc.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%Qubit = type opaque

define private { i1, %Qubit* } @_hl.main.1() {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %0 = call %Qubit* @__quantum__rt__qubit_allocate()
  %1 = insertvalue { i1, %Qubit* } { i1 true, %Qubit* poison }, %Qubit* %0, 1
  ret { i1, %Qubit* } %1
}

declare %Qubit* @__quantum__rt__qubit_allocate()
