src/qir/snapshots/hugr_qir__qir__qsystem_ext__test__emit@llvm14_tket.qsystem.ZZPhase.snap
---
source: src/qir/qsystem_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

%Qubit = type opaque

define private { %Qubit*, %Qubit* } @_hl.main.1(%Qubit* %0, %Qubit* %1, double %2) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @__quantum__qis__rzz__body(double %2, %Qubit* %0, %Qubit* %1)
  %mrv = insertvalue { %Qubit*, %Qubit* } undef, %Qubit* %0, 0
  %mrv8 = insertvalue { %Qubit*, %Qubit* } %mrv, %Qubit* %1, 1
  ret { %Qubit*, %Qubit* } %mrv8
}

declare void @__quantum__qis__rzz__body(double, %Qubit*, %Qubit*)
